# web3-gaming

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.claude/: settings.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  prisma-check.yml
backend/: .env.example  CLAUDE.md  Dockerfile  eslint.config.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
backend/prisma/: schema.prisma  seed.ts
backend/src/: index.ts
backend/src/constants/: index.ts
backend/src/db/: index.ts  redis.ts
backend/src/games/: index.ts
backend/src/middleware/: index.ts
backend/src/rooms/: index.ts
backend/src/services/: index.ts
backend/src/socket/: index.ts
backend/src/types/: enums.ts  game.ts  (+5 more)
contracts/: Anchor.toml  CLAUDE.md  Cargo.toml  package.json
contracts/programs/escrow/: Cargo.toml  lib.rs
contracts/programs/escrow/src/: constants.rs  errors.rs  lib.rs  state.rs
contracts/tests/: escrow.ts
frontend/: CLAUDE.md  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
tasks/: 0.1-monorepo-setup.md  0.10-git-branching-strategy.md  0.2-frontend-boilerplate.md  0.3-backend-boilerplate.md  0.4-database-setup.md  0.5-smart-contract-boilerplate.md  0.6-ci-cd-pipeline.md  0.7-shared-types.md  0.8-environment-variables.md  0.9-claude-md-and-documentation.md  development-roadmap.md  project-overview.md
(+13 files in other folders)
